# NoGameEngine

./: CMakeLists.txt
NoGameEngine-core/include/graphics/: batchrenderer2d.hpp  renderable2d.hpp  renderer2d.hpp  shader.hpp  simple2drenderer.hpp  sprite.hpp  staticsprite.hpp  window.hpp
NoGameEngine-core/include/graphics/buffers/: buffer.hpp  indexbuffer.hpp  vertexarray.hpp
NoGameEngine-core/include/graphics/layers/: group.hpp  layer.hpp  tilelayer.hpp
NoGameEngine-core/include/math/: mat4.hpp  math.hpp  mathF.hpp  vec2.hpp  vec3.hpp  vec4.hpp
NoGameEngine-core/include/utils/: fileutility.hpp  timer.hpp
NoGameEngine-core/src/: main.cpp
NoGameEngine-core/src/graphics/: batchrenderer2d.cpp  shader.cpp  simple2drenderer.cpp  sprite.cpp  staticsprite.cpp  window.cpp
NoGameEngine-core/src/graphics/buffers/: buffer.cpp  indexbuffer.cpp  vertexarray.cpp
NoGameEngine-core/src/graphics/layers/: group.cpp  layer.cpp  tilelayer.cpp
NoGameEngine-core/src/math/: mat4.cpp  vec2.cpp  vec3.cpp  vec4.cpp
NoGameEngine-core/src/shaders/: basic.frag
